fix: adjust styles, to align scheduler table cell with time header

--- a/src/core/styles/style.css
+++ b/src/core/styles/style.css
@@ -54,8 +54,7 @@
 }
 
 .scheduler-view {
-    border: 1px solid #e9e9e9;
-    margin: 0 0 0 -1px;
+    margin: 0;
     padding: 0;
 }
 
